# task16

./: CMakeLists.txt  README.md
include/: algo.h  config.h  game.h  record.h
src/: CMakeLists.txt  algo.c  game.c  main.c  record.c
